--- a/Scraping/final_code.ipynb
+++ b/Scraping/final_code.ipynb
@@ -77,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dd1b413b-9700-434a-a8ab-63b8253aadf5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "How can I help you?  iphone 13\n"
@@ -109,12 +109,12 @@
     }
    ],
    "source": [
-    "import openai\n",
-    "import pandas as pd\n",
-    "from fuzzywuzzy import fuzz\n",
+    "#import openai\n",
+    "#import pandas as pd\n",
+    "#from fuzzywuzzy import fuzz\n",
     "\n",
     "# Set your OpenAI API key\n",
-    "openai.api_key = 'sk-proj-kA9GfyXjrqh9lgY2ppr1T3BlbkFJxw1veilvpmfOhrvWocMT'\n",
+    "#openai.api_key = 'Set your OpenAI API key'\n",
     "\n",
     "def read_feedback_data(file_path):\n",
     "    try:\n",
